--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,17 +16,12 @@ form{
     border: 1px solid black;
     padding: 5px;
 }
-button{
-    transition: 0.25s;
-    background-color: none;
-    color: var(--color);
-}
+
 form button{
     width: 100%;
     height: 30px;
-    --color:rgb(0, 0, 0);
-    --hover: rgb(0, 98, 143);
-    color:white;
+    color:rgb(255, 255, 255);
+    background-color: rgb(0, 98, 143);
     border: none;
     padding: 0;
     margin: 0%;
