--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,9 @@ header{
 
 main{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 form{
@@ -41,3 +42,12 @@ form input,select{
     height: 50px;
     border: none;
 }
+
+#btn_list{
+    background-color: rgb(0, 98, 143);
+    color: rgb(255, 255, 255);
+    width: 100%;
+    height: 50px;
+    border: none;
+}
+
