--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,8 +46,16 @@ form input,select{
 #btn_list{
     background-color: rgb(0, 98, 143);
     color: rgb(255, 255, 255);
-    width: 100%;
+    width: 90%;
     height: 50px;
     border: none;
+    margin: 10px;
 }
 
+.tabla_duda{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
